--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 </head>
 <body>
-    <div id="app">
+    <div id="app" class="bg-green-100">
         <h1>{{say}}</h1>
         <p>{{p}}</p>
+
+        <img v-bind:src="loc" width="400" alt="">
     </div>
 
 
@@ -21,6 +23,6 @@
         const mountedApp = app.mount('#app')
     </script>
 
-    
+<script src="https://cdn.tailwindcss.com"></script>
 </body>
 </html>
